--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,11 @@
             <artifactId>maven-shade-plugin</artifactId>
             <version>3.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.3.4</version>
+        </dependency>
     </dependencies>
 
 </project>
