--- a/src/main/resources/test.properties
+++ b/src/main/resources/test.properties
@@ -1,4 +1,4 @@
 url=jdbc:h2:./testdb;MODE=PostgreSQL;CASE_INSENSITIVE_IDENTIFIERS=TRUE;
-username=
-password=
+username=postgres
+password=*#*Job4j
 driver-class-name=org.h2.Driver
